# autoevals

./: .env.example  .envrc  .eslintrc.js  .gitignore  .npmignore  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  SCORERS.md  env.sh  jest.config.cjs  jest.config.js  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  setup.py  tsconfig.json  tsup.config.js  turbo.json  typedoc-frontmatter.mjs  typedoc-mintlify.json  vitest.config.ts
.github/scripts/: check_version_sync.py
.github/workflows/: enforce-pnpm.yml  eval.yaml  js.yaml  lint.yaml  pre-commit.yaml  publish-js.yaml  publish-py.yaml  publish.yaml  pylint.yml  python.yaml  version-sync.yaml
.testcache/: oai.sqlite
.testcache/_openai.diskcache/: cache.db
docs/: PUBLISHING.md
evals/: package.json  tsconfig.json
evals/datasets/: coqa-closed-qa.json  coqa-context-relevancy.json  coqa-factuality.json  coqa.json
evals/src/: autoevals.eval.ts  datasets.ts  duckdb.ts  sync_datasets.ts
js/: base.ts  cjs.test.ts  custom_zod_to_json_schema.ts  embeddings.test.ts  env.ts  index.ts  init-models.test.ts  json.test.ts  json.ts  list.ts  llm.fixtures.ts  llm.test.ts  llm.ts  manifest.ts  moderation.test.ts  moderation.ts  node.ts  number.ts  oai.test.ts  oai.ts  partial.test.ts  partial.ts  ragas.test.ts  ragas.ts  reasoning-effort.test.ts  render-messages.test.ts  render-messages.ts  score.ts  sqlite_cache.ts  string.test.ts  string.ts  templates.ts  thread-utils.ts  util.ts  value.test.ts  value.ts  yaml.d.ts  zod-utils.ts
js/test/: setup.ts
node/: llm.test.ts  sqlite_cache.ts
py/autoevals/: __init__.py  base.py  claude.py  conftest.py  json.py  json_schema.py  list.py  litellm.py  llm.py  moderation.py  number.py  oai.py  partial.py  ragas.py  score.py  serializable_data_class.py  string.py  test_embeddings.py  test_init_models.py  test_json.py  test_json_schema.py  test_litellm.py  test_llm.py  test_moderation.py  test_oai.py  test_partial.py  test_ragas.py  test_reasoning_effort.py  test_serializable_data_class.py  test_string.py  test_values.py  thread_utils.py  util.py  value.py  version.py
scripts/: bundle-js.ts  node_postpublish.py  node_prepublish.py  prepare_readme.py
src/autoevals/: __init__.py  base.py  llm.py  string.py  test_llm.py  test_string.py
src/autoevals/templates/: closed_q_a.yaml  humor.yaml  possible.yaml  security.yaml  summary.yaml
templates/: battle.yaml  closed_q_a.yaml  factuality.yaml  humor.yaml  possible.yaml  security.yaml  sql.yaml  summary.yaml  translation.yaml
