[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autoevals"
dynamic = ["version"]
description = "Universal library for evaluating AI models"
readme = "README.md"
requires-python = ">=3.10.0"
authors = [{ name = "BrainTrust", email = "info@braintrustdata.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]
dependencies = [
  "chevron",
  "jsonschema",
  "polyleven",
  "pyyaml",
]

[project.urls]
Homepage = "https://www.braintrustdata.com"
"Bug Tracker" = "https://github.com/braintrustdata/autoevals"

[project.optional-dependencies]
dev = [
  # Formatting and linting
  "black==22.6.0",
  "flake8",
  "flake8-isort",
  "isort==5.12.0",
  "pre-commit",

  # Build and release tooling
  "build",
  "twine",

  # Development and test tooling
  "braintrust",
  "ipython",
  "openai",
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
  "respx",
]
doc = ["pydoc-markdown"]
scipy = ["numpy", "scipy"]
litellm = ["litellm>=1.60,<1.85"]
all = ["autoevals[scipy]"]

[tool.setuptools]
package-dir = { "" = "py" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["py"]

[tool.setuptools.dynamic]
version = { attr = "autoevals.version.VERSION" }

[tool.black]
line-length = 119

[tool.ruff]
line-length = 119
lint.select = ["I001"]
